First feature done, close #1

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,6 @@
+== Gestion de Projet avec les méthodes agiles
+== Bienvenue à tous
+
 == Welcome to Rails
 
 Rails is a web-application framework that includes everything needed to create
